@@ -1,0 +1,139 @@
+<?php
+// DO NOT CHANGE THIS FILE! It is automatically generated by extdeveval::buildAutoloadRegistry.
+// This file was generated on 2010-03-04 15:47
+
+$extensionPath = t3lib_extMgm::extPath('oelib');
+return array(
+	'tx_oelib_attachment' => $extensionPath . 'class.tx_oelib_Attachment.php',
+	'tx_oelib_autoloader' => $extensionPath . 'class.tx_oelib_Autoloader.php',
+	'tx_oelib_backendloginmanager' => $extensionPath . 'class.tx_oelib_BackEndLoginManager.php',
+	'tx_oelib_configuration' => $extensionPath . 'class.tx_oelib_Configuration.php',
+	'tx_oelib_configurationregistry' => $extensionPath . 'class.tx_oelib_ConfigurationRegistry.php',
+	'tx_oelib_datamapper' => $extensionPath . 'class.tx_oelib_DataMapper.php',
+	'tx_oelib_double3validator' => $extensionPath . 'class.tx_oelib_Double3Validator.php',
+	'tx_oelib_fakesession' => $extensionPath . 'class.tx_oelib_FakeSession.php',
+	'tx_oelib_filefunctions' => $extensionPath . 'class.tx_oelib_FileFunctions.php',
+	'tx_oelib_frontendloginmanager' => $extensionPath . 'class.tx_oelib_FrontEndLoginManager.php',
+	'tx_oelib_identitymap' => $extensionPath . 'class.tx_oelib_IdentityMap.php',
+	'tx_oelib_list' => $extensionPath . 'class.tx_oelib_List.php',
+	'tx_oelib_mail' => $extensionPath . 'class.tx_oelib_Mail.php',
+	'tx_oelib_mapperregistry' => $extensionPath . 'class.tx_oelib_MapperRegistry.php',
+	'tx_oelib_model' => $extensionPath . 'class.tx_oelib_Model.php',
+	'tx_oelib_object' => $extensionPath . 'class.tx_oelib_Object.php',
+	'tx_oelib_objectfactory' => $extensionPath . 'class.tx_oelib_ObjectFactory.php',
+	'tx_oelib_pagefinder' => $extensionPath . 'class.tx_oelib_PageFinder.php',
+	'tx_oelib_publicobject' => $extensionPath . 'class.tx_oelib_PublicObject.php',
+	'tx_oelib_session' => $extensionPath . 'class.tx_oelib_Session.php',
+	'tx_oelib_template' => $extensionPath . 'class.tx_oelib_Template.php',
+	'tx_oelib_templateregistry' => $extensionPath . 'class.tx_oelib_TemplateRegistry.php',
+	'tx_oelib_timer' => $extensionPath . 'class.tx_oelib_Timer.php',
+	'tx_oelib_translator' => $extensionPath . 'class.tx_oelib_Translator.php',
+	'tx_oelib_translatorregistry' => $extensionPath . 'class.tx_oelib_TranslatorRegistry.php',
+	'tx_oelib_abstractheaderproxy' => $extensionPath . 'class.tx_oelib_abstractHeaderProxy.php',
+	'tx_oelib_abstractmailer' => $extensionPath . 'class.tx_oelib_abstractMailer.php',
+	'tx_oelib_configcheck' => $extensionPath . 'class.tx_oelib_configcheck.php',
+	'tx_oelib_configurationproxy' => $extensionPath . 'class.tx_oelib_configurationProxy.php',
+	'tx_oelib_db' => $extensionPath . 'class.tx_oelib_db.php',
+	'tx_oelib_emailcollector' => $extensionPath . 'class.tx_oelib_emailCollector.php',
+	'tx_oelib_headercollector' => $extensionPath . 'class.tx_oelib_headerCollector.php',
+	'tx_oelib_headerproxyfactory' => $extensionPath . 'class.tx_oelib_headerProxyFactory.php',
+	'tx_oelib_mailerfactory' => $extensionPath . 'class.tx_oelib_mailerFactory.php',
+	'tx_oelib_realheaderproxy' => $extensionPath . 'class.tx_oelib_realHeaderProxy.php',
+	'tx_oelib_realmailer' => $extensionPath . 'class.tx_oelib_realMailer.php',
+	'tx_oelib_salutationswitcher' => $extensionPath . 'class.tx_oelib_salutationswitcher.php',
+	'tx_oelib_templatehelper' => $extensionPath . 'class.tx_oelib_templatehelper.php',
+	'tx_oelib_testingframework' => $extensionPath . 'class.tx_oelib_testingFramework.php',
+	'tx_oelib_exception_accessdenied' => $extensionPath . 'Exception/class.tx_oelib_Exception_AccessDenied.php',
+	'tx_oelib_exception_database' => $extensionPath . 'Exception/class.tx_oelib_Exception_Database.php',
+	'tx_oelib_exception_emptyqueryresult' => $extensionPath . 'Exception/class.tx_oelib_Exception_EmptyQueryResult.php',
+	'tx_oelib_exception_notfound' => $extensionPath . 'Exception/class.tx_oelib_Exception_NotFound.php',
+	'tx_oelib_interface_address' => $extensionPath . 'Interface/class.tx_oelib_Interface_Address.php',
+	'tx_oelib_interface_loginmanager' => $extensionPath . 'Interface/class.tx_oelib_Interface_LoginManager.php',
+	'tx_oelib_interface_mailrole' => $extensionPath . 'Interface/class.tx_oelib_Interface_MailRole.php',
+	'tx_oelib_mapper_backenduser' => $extensionPath . 'Mapper/class.tx_oelib_Mapper_BackEndUser.php',
+	'tx_oelib_mapper_backendusergroup' => $extensionPath . 'Mapper/class.tx_oelib_Mapper_BackEndUserGroup.php',
+	'tx_oelib_mapper_country' => $extensionPath . 'Mapper/class.tx_oelib_Mapper_Country.php',
+	'tx_oelib_mapper_currency' => $extensionPath . 'Mapper/class.tx_oelib_Mapper_Currency.php',
+	'tx_oelib_mapper_frontenduser' => $extensionPath . 'Mapper/class.tx_oelib_Mapper_FrontEndUser.php',
+	'tx_oelib_mapper_frontendusergroup' => $extensionPath . 'Mapper/class.tx_oelib_Mapper_FrontEndUserGroup.php',
+	'tx_oelib_mapper_language' => $extensionPath . 'Mapper/class.tx_oelib_Mapper_Language.php',
+	'tx_oelib_model_backenduser' => $extensionPath . 'Model/class.tx_oelib_Model_BackEndUser.php',
+	'tx_oelib_model_backendusergroup' => $extensionPath . 'Model/class.tx_oelib_Model_BackEndUserGroup.php',
+	'tx_oelib_model_country' => $extensionPath . 'Model/class.tx_oelib_Model_Country.php',
+	'tx_oelib_model_currency' => $extensionPath . 'Model/class.tx_oelib_Model_Currency.php',
+	'tx_oelib_model_frontenduser' => $extensionPath . 'Model/class.tx_oelib_Model_FrontEndUser.php',
+	'tx_oelib_model_frontendusergroup' => $extensionPath . 'Model/class.tx_oelib_Model_FrontEndUserGroup.php',
+	'tx_oelib_model_language' => $extensionPath . 'Model/class.tx_oelib_Model_Language.php',
+	'tx_oelib_viewhelper_price' => $extensionPath . 'ViewHelper/class.tx_oelib_ViewHelper_Price.php',
+	'tx_oelib_visibility_node' => $extensionPath . 'Visibility/class.tx_oelib_Visibility_Node.php',
+	'tx_oelib_visibility_tree' => $extensionPath . 'Visibility/class.tx_oelib_Visibility_Tree.php',
+	'tx_oelib_attachment_testcase' => $extensionPath . 'tests/tx_oelib_Attachment_testcase.php',
+	'tx_oelib_autoloader_testcase' => $extensionPath . 'tests/tx_oelib_Autoloader_testcase.php',
+	'tx_oelib_backendloginmanager_testcase' => $extensionPath . 'tests/tx_oelib_BackEndLoginManager_testcase.php',
+	'tx_oelib_configurationregistry_testcase' => $extensionPath . 'tests/tx_oelib_ConfigurationRegistry_testcase.php',
+	'tx_oelib_configuration_testcase' => $extensionPath . 'tests/tx_oelib_Configuration_testcase.php',
+	'tx_oelib_datamapper_testcase' => $extensionPath . 'tests/tx_oelib_DataMapper_testcase.php',
+	'tx_oelib_double3validator_testcase' => $extensionPath . 'tests/tx_oelib_Double3Validator_testcase.php',
+	'tx_oelib_exception_database_testcase' => $extensionPath . 'tests/tx_oelib_Exception_Database_testcase.php',
+	'tx_oelib_exception_emptyqueryresult_testcase' => $extensionPath . 'tests/tx_oelib_Exception_EmptyQueryResult_testcase.php',
+	'tx_oelib_fakesession_testcase' => $extensionPath . 'tests/tx_oelib_FakeSession_testcase.php',
+	'tx_oelib_frontendloginmanager_testcase' => $extensionPath . 'tests/tx_oelib_FrontEndLoginManager_testcase.php',
+	'tx_oelib_identitymap_testcase' => $extensionPath . 'tests/tx_oelib_IdentityMap_testcase.php',
+	'tx_oelib_list_testcase' => $extensionPath . 'tests/tx_oelib_List_testcase.php',
+	'tx_oelib_mail_testcase' => $extensionPath . 'tests/tx_oelib_Mail_testcase.php',
+	'tx_oelib_mapperregistry_testcase' => $extensionPath . 'tests/tx_oelib_MapperRegistry_testcase.php',
+	'tx_oelib_mapper_backendusergroup_testcase' => $extensionPath . 'tests/tx_oelib_Mapper_BackEndUserGroup_testcase.php',
+	'tx_oelib_mapper_backenduser_testcase' => $extensionPath . 'tests/tx_oelib_Mapper_BackEndUser_testcase.php',
+	'tx_oelib_mapper_country_testcase' => $extensionPath . 'tests/tx_oelib_Mapper_Country_testcase.php',
+	'tx_oelib_mapper_currency_testcase' => $extensionPath . 'tests/tx_oelib_Mapper_Currency_testcase.php',
+	'tx_oelib_mapper_frontendusergroup_testcase' => $extensionPath . 'tests/tx_oelib_Mapper_FrontEndUserGroup_testcase.php',
+	'tx_oelib_mapper_frontenduser_testcase' => $extensionPath . 'tests/tx_oelib_Mapper_FrontEndUser_testcase.php',
+	'tx_oelib_mapper_language_testcase' => $extensionPath . 'tests/tx_oelib_Mapper_Language_testcase.php',
+	'tx_oelib_model_backendusergroup_testcase' => $extensionPath . 'tests/tx_oelib_Model_BackEndUserGroup_testcase.php',
+	'tx_oelib_model_backenduser_testcase' => $extensionPath . 'tests/tx_oelib_Model_BackEndUser_testcase.php',
+	'tx_oelib_model_country_testcase' => $extensionPath . 'tests/tx_oelib_Model_Country_testcase.php',
+	'tx_oelib_model_currency_testcase' => $extensionPath . 'tests/tx_oelib_Model_Currency_testcase.php',
+	'tx_oelib_model_frontendusergroup_testcase' => $extensionPath . 'tests/tx_oelib_Model_FrontEndUserGroup_testcase.php',
+	'tx_oelib_model_frontenduser_testcase' => $extensionPath . 'tests/tx_oelib_Model_FrontEndUser_testcase.php',
+	'tx_oelib_model_language_testcase' => $extensionPath . 'tests/tx_oelib_Model_Language_testcase.php',
+	'tx_oelib_model_testcase' => $extensionPath . 'tests/tx_oelib_Model_testcase.php',
+	'tx_oelib_objectfactory_testcase' => $extensionPath . 'tests/tx_oelib_ObjectFactory_testcase.php',
+	'tx_oelib_object_testcase' => $extensionPath . 'tests/tx_oelib_Object_testcase.php',
+	'tx_oelib_pagefinder_testcase' => $extensionPath . 'tests/tx_oelib_PageFinder_testcase.php',
+	'tx_oelib_session_testcase' => $extensionPath . 'tests/tx_oelib_Session_testcase.php',
+	'tx_oelib_templateregistry_testcase' => $extensionPath . 'tests/tx_oelib_TemplateRegistry_testcase.php',
+	'tx_oelib_template_testcase' => $extensionPath . 'tests/tx_oelib_Template_testcase.php',
+	'tx_oelib_timer_testcase' => $extensionPath . 'tests/tx_oelib_Timer_testcase.php',
+	'tx_oelib_translatorregistry_testcase' => $extensionPath . 'tests/tx_oelib_TranslatorRegistry_testcase.php',
+	'tx_oelib_translator_testcase' => $extensionPath . 'tests/tx_oelib_Translator_testcase.php',
+	'tx_oelib_viewhelper_price_testcase' => $extensionPath . 'tests/tx_oelib_ViewHelper_Price_testcase.php',
+	'tx_oelib_visibility_node_testcase' => $extensionPath . 'tests/tx_oelib_Visibility_Node_testcase.php',
+	'tx_oelib_visibility_tree_testcase' => $extensionPath . 'tests/tx_oelib_Visibility_Tree_testcase.php',
+	'tx_oelib_configurationcheck_testcase' => $extensionPath . 'tests/tx_oelib_configurationCheck_testcase.php',
+	'tx_oelib_configurationproxy_testcase' => $extensionPath . 'tests/tx_oelib_configurationProxy_testcase.php',
+	'tx_oelib_db_testcase' => $extensionPath . 'tests/tx_oelib_db_testcase.php',
+	'tx_oelib_headerproxyfactory_testcase' => $extensionPath . 'tests/tx_oelib_headerProxyFactory_testcase.php',
+	'tx_oelib_mailerfactory_testcase' => $extensionPath . 'tests/tx_oelib_mailerFactory_testcase.php',
+	'tx_oelib_phpmyadmin_testcase' => $extensionPath . 'tests/tx_oelib_phpmyadmin_testcase.php',
+	'tx_oelib_salutationswitcherchild_testcase' => $extensionPath . 'tests/tx_oelib_salutationswitcherchild_testcase.php',
+	'tx_oelib_templatehelperchild_testcase' => $extensionPath . 'tests/tx_oelib_templatehelperchild_testcase.php',
+	'tx_oelib_testingframework_testcase' => $extensionPath . 'tests/tx_oelib_testingFramework_testcase.php',
+	'tx_oelib_dummyobjecttocheck' => $extensionPath . 'tests/fixtures/class.tx_oelib_dummyObjectToCheck.php',
+	'tx_oelib_salutationswitcherchild' => $extensionPath . 'tests/fixtures/class.tx_oelib_salutationswitcherchild.php',
+	'tx_oelib_templatehelperchild' => $extensionPath . 'tests/fixtures/class.tx_oelib_templatehelperchild.php',
+	'tx_oelib_testingobject' => $extensionPath . 'tests/fixtures/class.tx_oelib_testingObject.php',
+	'tx_oelib_tests_fixtures_columnlesstestingmapper' => $extensionPath . 'tests/fixtures/class.tx_oelib_tests_fixtures_ColumnLessTestingMapper.php',
+	'tx_oelib_tests_fixtures_empty' => $extensionPath . 'tests/fixtures/class.tx_oelib_tests_fixtures_Empty.php',
+	'tx_oelib_tests_fixtures_modellesstestingmapper' => $extensionPath . 'tests/fixtures/class.tx_oelib_tests_fixtures_ModelLessTestingMapper.php',
+	'tx_oelib_tests_fixtures_notincluded' => $extensionPath . 'tests/fixtures/class.tx_oelib_tests_fixtures_NotIncluded.php',
+	'tx_oelib_tests_fixtures_notincludedeither' => $extensionPath . 'tests/fixtures/class.tx_oelib_tests_fixtures_NotIncludedEither.php',
+	'tx_oelib_tests_fixtures_readonlymodel' => $extensionPath . 'tests/fixtures/class.tx_oelib_tests_fixtures_ReadOnlyModel.php',
+	'tx_oelib_tests_fixtures_tablelesstestingmapper' => $extensionPath . 'tests/fixtures/class.tx_oelib_tests_fixtures_TableLessTestingMapper.php',
+	'tx_oelib_tests_fixtures_testingchildmapper' => $extensionPath . 'tests/fixtures/class.tx_oelib_tests_fixtures_TestingChildMapper.php',
+	'tx_oelib_tests_fixtures_testingchildmodel' => $extensionPath . 'tests/fixtures/class.tx_oelib_tests_fixtures_TestingChildModel.php',
+	'tx_oelib_tests_fixtures_testingmailrole' => $extensionPath . 'tests/fixtures/class.tx_oelib_tests_fixtures_TestingMailRole.php',
+	'tx_oelib_tests_fixtures_testingmapper' => $extensionPath . 'tests/fixtures/class.tx_oelib_tests_fixtures_TestingMapper.php',
+	'tx_oelib_tests_fixtures_testingmodel' => $extensionPath . 'tests/fixtures/class.tx_oelib_tests_fixtures_TestingModel.php',
+	'tx_oelib_tests_fixtures_pi1_notincluded1' => $extensionPath . 'tests/fixtures/pi1/class.tx_oelib_tests_fixtures_pi1_NotIncluded1.php',
+);
+?>
