@@ -1,4 +1,5 @@
 0.8.0 - currently working on
+- [#3729] Change: Provide ext_autoload for our extensions
 
 0.7.0 - released 2010-02-23
 - [#3701] Feature: Add Model::markAsVisible and ::markAsHidden
